adding links to additional resources

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,6 +225,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Additional Resources\n",
+    "\n",
+    "* [PEP Website](https://www.python.org/dev/peps/)\n",
+    "* [PEP8 Page](https://www.python.org/dev/peps/pep-0008/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Summary\n",
     "\n",
     "In this lesson, we introduced you to Python Enhancement Proposolas (PEPs), documents for the python community meant to describe new features or processes. Specifically, we discussed some of the contents of PEP8, the style guide for python. Follow these guidelines will lead to more readable code that can be shared with collaborators. With that, let's leave you with a poem of sorts: PEP20!\n",
