--- a/index.ipynb
+++ b/index.ipynb
@@ -15,36 +15,21 @@
     "You will be able to:\n",
     "\n",
     "* Define the acronym PEP\n",
-    "* Describe several style guidelines for python code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* Describe several style guidelines for python code\n",
+    "\n",
     "## PEP8 Introductory Notes\n",
     "\n",
-    "Remember that the guidelines in PEP8 are just that: guidelines. There main goal is to make code more readable. Often, projects may have their own style guidelines which should take precedence. Most important of all is consistency. Be consistent with how you format your code and stick to it. With that, here's an overview of some of the most important guidelines from the PEP8 document to start familiarizing yourself with."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Remember that the guidelines in PEP8 are just that: guidelines. The main goal is to make code more readable. Often, projects may have their own style guidelines which should take precedence. Most important of all is consistency. Be consistent with how you format your code and stick to it. With that, here's an overview of some of the most important guidelines from the PEP8 document to start familiarizing yourself with.\n",
+    "\n",
     "## Indentation\n",
     "\n",
-    "1. When identing, use 4 spaces instead of a tab.\n",
+    "1. When indenting, use 4 spaces instead of a tab.\n",
     "    1. Note that Python 3 disallows mixing the use of tabs and spaces for indentation. At some point you'll encounter this error: be on the lookout!\n",
-    "2. Vertically allign continuation lines of code.\n",
+    "2. Vertically align continuation lines of code.\n",
     "    1. This gets used for long functions, lists or conditionals\n",
     "\n",
-    "Here's some examples!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Here are some examples!\n",
+    "\n",
     "### Good Indentation:"
    ]
   },
@@ -218,26 +203,17 @@
     "\n",
     "1. Never use the characters 'l' (lowercase letter el), 'O' (uppercase letter oh), or 'I' (uppercase letter eye) as single character variable names.\n",
     "     1. In some fonts, these characters are indistinguishable from the numerals one and zero. When tempted to use 'l', use 'L' instead.  \n",
-    "2. Don't use built in python keywords like list, dict or str as variable names: this is not only a style guideline, it will break your code! "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "2. Don't use built-in python keywords like list, dict or str as variable names: this is not only a style guideline, it will break your code! \n",
+    "\n",
     "## Additional Resources\n",
     "\n",
     "* [PEP Website](https://www.python.org/dev/peps/)\n",
-    "* [PEP8 Page](https://www.python.org/dev/peps/pep-0008/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* [PEP8 Page](https://www.python.org/dev/peps/pep-0008/)\n",
+    "\n",
     "## Summary\n",
     "\n",
-    "In this lesson, we introduced you to Python Enhancement Proposolas (PEPs), documents for the python community meant to describe new features or processes. Specifically, we discussed some of the contents of PEP8, the style guide for python. Follow these guidelines will lead to more readable code that can be shared with collaborators. With that, let's leave you with a poem of sorts: PEP20!\n",
+    "In this lesson, we introduced you to Python Enhancement Proposals (PEPs),\n",
+    " documents for the python community meant to describe new features or processes. Specifically, we discussed some of the contents of PEP8, the style guide for python. Follow these guidelines will lead to more readable code that can be shared with collaborators. With that, let's leave you with a poem of sorts: PEP20!\n",
     "\n",
     "PEP 20 -- The Zen of Python\n",
     "\n",
@@ -279,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
