--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,7 @@
     "## Whitespace\n",
     "\n",
     "1. Avoid trailing whitespace; its hard to see!\n",
-    "2. Always use whitespace one either side of binary operators like =, ==, !=, >, <, <=, not, in, and, or...\n",
+    "2. Always use whitespace on either side of binary operators like =, ==, !=, >, <, <=, not, in, and, or...\n",
     "3. If operators with different priorities are used, consider adding whitespace around the operators with the lowest priority(ies). For example, multiplication takes precedence over addition, so we might not include whitespace around the multiplication, helping to indicate that these operations happen first and form a cohesive group."
    ]
   },
@@ -255,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
