--- a/index.ipynb
+++ b/index.ipynb
@@ -19,8 +19,96 @@
     "\n",
     "## PEP8 Introductory Notes\n",
     "\n",
-    "Remember that the guidelines in PEP8 are just that: guidelines. The main goal is to make code more readable. Often, projects may have their own style guidelines which should take precedence. Most important of all is consistency. Be consistent with how you format your code and stick to it. With that, here's an overview of some of the most important guidelines from the PEP8 document to start familiarizing yourself with.\n",
+    "Remember that the guidelines in PEP8 are just that: guidelines. The main goal is to make code more readable. Often, projects may have their own style guidelines which should take precedence. Most important of all is consistency. Be consistent with how you format your code and stick to it. With that, here's an overview of some of the most important guidelines from the PEP8 document to start familiarizing yourself with."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Whitespace\n",
     "\n",
+    "1. Avoid trailing whitespace; its hard to see!\n",
+    "2. Always use whitespace on either side of binary operators like =, ==, !=, >, <, <=, not, in, and, or...\n",
+    "3. If operators with different priorities are used, consider adding whitespace around the operators with the lowest priority(ies). For example, multiplication takes precedence over addition, so we might not include whitespace around the multiplication, helping to indicate that these operations happen first and form a cohesive group."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Good whitespace usage:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 1\n",
+    "i = i + 1\n",
+    "i += 1\n",
+    "x = i*2 - 1\n",
+    "hypot2 = x*x + i*i\n",
+    "c = (x+x) * (i-i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bad whitespace usage:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i=1\n",
+    "i=i+1\n",
+    "i +=1\n",
+    "x = i * 2 - 1\n",
+    "hypot2 = x * x + i * i\n",
+    "c = (x + x) * (i - i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Line Length\n",
+    "\n",
+    "As a general rule of thumb, limit all lines of code to 79 characters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Below is a verbose list comprehension that is 79 characters long as a silly example\n",
+    "[integer**2+1 for integer in range(1,100) if integer > 20 and integer % 5 == 0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variable Names\n",
+    "\n",
+    "1. Never use the characters 'l' (lowercase letter el), 'O' (uppercase letter oh), or 'I' (uppercase letter eye) as single character variable names.\n",
+    "     1. In some fonts, these characters are indistinguishable from the numerals one and zero. When tempted to use 'l', use 'L' instead.  \n",
+    "2. Don't use built-in python keywords like list, dict or str as variable names: this is not only a style guideline, it will break your code! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Indentation\n",
     "\n",
     "The importance of indentation in python was introduced in the conditionals lesson. Here are the conventional style guidelines that should be followed:\n",
@@ -30,7 +118,7 @@
     "2. Vertically align continuation lines of code.\n",
     "    1. This gets used for long functions, lists or conditionals\n",
     "\n",
-    "Here are some examples using functions. Functions will be introduced formally in the future so don't worry if the syntax looks unfamiliar. Comments have been placed in the code to help guide understanding.\n",
+    "Here are some examples using functions. Functions will be introduced formally in the future so don't worry if the syntax looks unfamiliar. Just keep in mind that there are style conventions associated with functions. Comments have been placed in the code to help guide understanding.\n",
     "\n",
     "### Good Indentation:"
    ]
@@ -129,84 +217,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Whitespace\n",
-    "\n",
-    "1. Avoid trailing whitespace; its hard to see!\n",
-    "2. Always use whitespace on either side of binary operators like =, ==, !=, >, <, <=, not, in, and, or...\n",
-    "3. If operators with different priorities are used, consider adding whitespace around the operators with the lowest priority(ies). For example, multiplication takes precedence over addition, so we might not include whitespace around the multiplication, helping to indicate that these operations happen first and form a cohesive group."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Good whitespace usage:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = 1\n",
-    "i = i + 1\n",
-    "i += 1\n",
-    "x = i*2 - 1\n",
-    "hypot2 = x*x + i*i\n",
-    "c = (x+x) * (i-i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Bad whitespace usage:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i=1\n",
-    "i=i+1\n",
-    "i +=1\n",
-    "x = i * 2 - 1\n",
-    "hypot2 = x * x + i * i\n",
-    "c = (x + x) * (i - i)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Line Length\n",
-    "\n",
-    "As a general rule of thumb, limit all lines of code to 79 characters."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Below is a verbose list comprehension that is 79 characters long as a silly example\n",
-    "[integer**2+1 for integer in range(1,100) if integer > 20 and integer % 5 == 0]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Variable Names\n",
-    "\n",
-    "1. Never use the characters 'l' (lowercase letter el), 'O' (uppercase letter oh), or 'I' (uppercase letter eye) as single character variable names.\n",
-    "     1. In some fonts, these characters are indistinguishable from the numerals one and zero. When tempted to use 'l', use 'L' instead.  \n",
-    "2. Don't use built-in python keywords like list, dict or str as variable names: this is not only a style guideline, it will break your code! \n",
-    "\n",
     "## Additional Resources\n",
     "\n",
     "* [PEP Website](https://www.python.org/dev/peps/)\n",
