--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "## Summary\n",
     "\n",
     "In this lesson, we introduced you to Python Enhancement Proposals (PEPs),\n",
-    " documents for the python community meant to describe new features or processes. Specifically, we discussed some of the contents of PEP8, the style guide for python. Follow these guidelines will lead to more readable code that can be shared with collaborators. With that, let's leave you with a poem of sorts: PEP20!\n",
+    " documents for the python community meant to describe new features or processes. Specifically, we discussed some of the contents of PEP8, the style guide for python. Following these guidelines will lead to more readable code that can be shared with collaborators. With that, let's leave you with a poem of sorts: PEP20!\n",
     "\n",
     "PEP 20 -- The Zen of Python\n",
     "\n",
@@ -267,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
