add JP's material

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PEP8 and PEP257\n",
+    "# PEP8\n",
     "\n",
     "## Introduction\n",
     "\n",
