add JP's material

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PEP8\n",
+    "# PEP8 and PEP257\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -216,36 +216,153 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Additional Resources\n",
+    "### PEP 257 - Docstring Conventions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are also recommendations for how to format your docstrings. But first, what is a docstring? A docstring is a string literal (AKA fixed value) that occurs as the first statement in a module, function, or method definition. Recall that a function should ideally only perform one action. A docstring of a function should tell you simply what it does and some description of the arguments it takes and the output You can see an example below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### One-line Docstring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example of a one-line docstring for a function. a one-line description\n",
+    "# is sufficient for a relatively simple function.\n",
     "\n",
+    "def add_one(number):\n",
+    "    \"\"\"\n",
+    "    add_one() takes an integer, float and returns that value \n",
+    "    added by one.\n",
+    "    \"\"\"\n",
+    "    number_plus_one = number + 1\n",
+    "    return number_plus_one\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Multi-line Docstring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example of a multi-line docstring. If your function has some complexity\n",
+    "# a more descriptive docstring is recommended that includes descriptions\n",
+    "# of the function arguments and outputs like so.\n",
+    "\n",
+    "def add_two(number):\n",
+    "    \"\"\"\n",
+    "    add_two() takes an integer, float and returns that value \n",
+    "    added by one.\n",
+    "    \n",
+    "    Arguments: number - a single integer or float.\n",
+    "    \n",
+    "    Returns:   number_plus_two - the sum of the given integer or float and \n",
+    "               two.\n",
+    "    \"\"\"\n",
+    "    number_plus_one = number + 1\n",
+    "    return number_plus_one\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You have accessed the docstrings of functions before by using the `help()`\n",
+    "command. This is the process how those are written! lets take a look at the ways we can access docstrings of functions.\n",
+    "\n",
+    "**Remember that when calling the help command and you want the docstring of the function, to pass the `help()` function the name of your function,  without the parentheses!**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1.) By using the help() command.\n",
+    "help(add_one)\n",
+    "help(add_two)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Why is this important?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Data Analytics and the Data Science fields... You will likely be performing repeat tasks, usually in cleaning and formatting data for analysis. Although not all analysts use Python, it is an incredibly powerful and versatile tool when undertaking any analysis. Its also a highly-demanded skill!\n",
+    "\n",
+    "It is typical for professionals in these fields to write functions they will use often in a python file. This file would have a `.py` extension and you would be able to use functions written in it just like you use those in the libraries you have used thus far. Those libraries are just `.py` files! This is how any library is written. You may share this file with collaborators or make it open-source (available to the public on a platform like github). In any case, when sharing code READABILITY and CLARITY are gold. thats why it is good to hold to the PEP 8 and PEP 257 conventions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Additional Resources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* [PEP Website](https://www.python.org/dev/peps/)\n",
     "* [PEP8 Page](https://www.python.org/dev/peps/pep-0008/)\n",
+    "* [PEP257 Page](https://www.python.org/dev/peps/pep-0257/)\n",
+    "* [Numpy Style Guide for Docstrings](https://numpydoc.readthedocs.io/en/latest/format.html)\n",
     "\n",
-    "## Summary\n",
+    "The above is a good resource on specifics about docstrings for functions that are concerned with computation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Today we introduced you to Python Enhancement Proposals (PEPs), documents for the Python community meant to describe new features or processes. Specifically, we discussed some of the contents of PEP8, the style guide for Python. Following these guidelines will lead to more readable code that can be shared with collaborators. With that, let's leave you with a poem of sorts: PEP20!\n",
     "\n",
-    "In this lesson, we introduced you to Python Enhancement Proposals (PEPs), documents for the Python community meant to describe new features or processes. Specifically, we discussed some of the contents of PEP8, the style guide for Python. Following these guidelines will lead to more readable code that can be shared with collaborators. With that, let's leave you with a poem of sorts: PEP20!\n",
-    "\n",
-    "PEP 20 -- The Zen of Python\n",
-    "\n",
-    "Beautiful is better than ugly.  \n",
-    "Explicit is better than implicit.  \n",
-    "Simple is better than complex.  \n",
-    "Complex is better than complicated.  \n",
-    "Flat is better than nested.  \n",
-    "Sparse is better than dense.  \n",
-    "Readability counts.  \n",
-    "Special cases aren't special enough to break the rules.  \n",
-    "Although practicality beats purity.  \n",
-    "Errors should never pass silently.  \n",
-    "Unless explicitly silenced.  \n",
-    "In the face of ambiguity, refuse the temptation to guess.  \n",
-    "There should be one-- and preferably only one --obvious way to do it.  \n",
-    "Although that way may not be obvious at first unless you're Dutch.  \n",
-    "Now is better than never.  \n",
-    "Although never is often better than *right* now.  \n",
-    "If the implementation is hard to explain, it's a bad idea.  \n",
-    "If the implementation is easy to explain, it may be a good idea.  \n",
-    "Namespaces are one honking great idea -- let's do more of those!  "
+    "PEP 20 -- The Zen of Python: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import this"
    ]
   }
  ],
@@ -265,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
